--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
           <ol class="project-list">
 
             <li class="project-item">
-              <a href="https://hellen.p.goit.global/" class="project-item-link">https://hellen.p.goit.global/</a><span class="project-item-descr">......................................[ HTML5, CSS3 ]</span> 
+              <a href="https://unrivaled-druid-b92b48.netlify.app" class="project-item-link">https://unrivaled-druid-b92b48.netlify.app</a><span class="project-item-descr">...................................[ HTML5, CSS3, JavaScript ]</span> 
             </li>
             <li class="project-item">
-              <a href="https://cryptohub.p.goit.global/" class="project-item-link">https://cryptohub.p.goit.global/</a><span class="project-item-descr">............................[ JavaScript ]</span> 
+              <a href="https://fanciful-semolina-3ff9b0.netlify.app/" class="project-item-link">https://fanciful-semolina-3ff9b0.netlify.app/</a><span class="project-item-descr">................................[ HTML5, CSS3, JavaScript, Bootstrap ]</span> 
             </li>
             <li class="project-item">
-              <a href="https://kidslike.p.goit.global/" class="project-item-link">https://kidslike.p.goit.global/</a><span class="project-item-descr">...................................[ React.js, Node.js ]</span> 
+              <a href="https://master--fluffy-tanuki-c2ecaf.netlify.app/" class="project-item-link">https://master--fluffy-tanuki-c2ecaf.netlify.app/</a><span class="project-item-descr">.........................[ HTML5, CSS3, JavaScript, SCSS ]</span> 
+            </li>
+            <li class="project-item">
+              <a href="https://mellow-concha-4d6496.netlify.app/" class="project-item-link">https://mellow-concha-4d6496.netlify.app/</a><span class="project-item-descr">...................................[ HTML5, CSS3 ]</span> 
             </li>
 
           </ol>
@@ -67,14 +70,11 @@
 
             <h4 class="my-work-exp-position">Front-End Developer <span class="my-work-exp-company">Freelance</span></h4>
 
-            <p class="working-period">September 2019 - up to now | Country</p>
+            <p class="working-period">November  2022 - up to January 2023 | Ukraine</p>
 
             <ul class="work-achivments-list">
 
-              <li class="work-achivments">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-              <li class="work-achivments">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-              <li class="work-achivments">Risus commodo viverra maecenas.</li>
-              <li class="work-achivments">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li>
+              <li class="work-achivments">For a small fee, I assisted a few of my friends who are front-end programmers with routine and simple tasks. It was my first introduction to CSS, HTML, and the world of front-end development.</li>
 
             </ul>
 
@@ -83,19 +83,19 @@
           <!-- Company 2 -->
           <div class="my-work-exp-place">
 
-            <h4 class="my-work-exp-position">Manager <span class="my-work-exp-company">Banderogusak & Co</span></h4>
+            <h4 class="my-work-exp-position">Front-End Developer <span class="my-work-exp-company">My own projects</span></h4>
 
-            <p class="working-period">March 2015 - October 2018 | Country</p>
+            <p class="working-period">February 2023 - up to now | Ukraine</p>
 
             <ul class="work-achivments-list">
-              <li class="work-achivments">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
-              <li class="work-achivments">Quis ipsum suspendisse ultrices gravida.</li>
-              <li class="work-achivments">Risus commodo viverra maecenas.</li>
+
+              <li class="work-achivments">I have several projects that do not have a server side at the moment. Among them are two landing pages, Google Search and an simple online store. In these projects, I used technologies such as Bootstrap, JavaScript (JS), SCSS, jQuery, and Slick Slider. All of the above projects were developed with responsive design in mind, which allows them to fit the size of users' screens.</li>
+
             </ul>
             
           </div>
 
-          <!-- Company 3 -->
+          <!--  Company 3
           <div class="my-work-exp-place">
 
             <h4 class="my-work-exp-position">Manager <span class="my-work-exp-company">BestUA Corp</span></h4>
@@ -108,7 +108,7 @@
               <li class="work-achivments">Risus commodo viverra maecenas.</li>
             </ul>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -128,7 +128,7 @@
       <!-- Sidebar -->
       <aside class="sidebar">
 
-        <img src="img/Frame1.png" alt="My photo" width="350px" class = "my-photo"/>
+        <img src="img/Frame2.png" alt="My photo" width="350px" class = "my-photo"/>
 
         <!-- Contacts -->
         <div class="contacts-container">
@@ -149,6 +149,8 @@
             <li class="tech-skillslist-item"> <span class="tech-skillslist-text">HTML5</span> </li>
             <li class="tech-skillslist-item"> <span class="tech-skillslist-text">CSS3</span> </li>
             <li class="tech-skillslist-item"> <span class="tech-skillslist-text">GIT</span> </li>
+            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">SCSS</span> </li>
+            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">Jquery</span> </li>
             <li class="tech-skillslist-item"> <span class="tech-skillslist-text">JavaScript</span> </li>
           </ul>
 
