Add target blank to Link

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
           <ol class="project-list">
 
             <li class="project-item">
-              <a href="https://unrivaled-druid-b92b48.netlify.app" class="project-item-link">https://unrivaled-druid-b92b48.netlify.app</a><span class="project-item-descr">...................................[ HTML5, CSS3, JavaScript ]</span> 
+              <a href="https://unrivaled-druid-b92b48.netlify.app" target="_blank" class="project-item-link">https://unrivaled-druid-b92b48.netlify.app</a><span class="project-item-descr">...................................[ HTML5, CSS3, JavaScript ]</span> 
             </li>
             <li class="project-item">
-              <a href="https://fanciful-semolina-3ff9b0.netlify.app/" class="project-item-link">https://fanciful-semolina-3ff9b0.netlify.app/</a><span class="project-item-descr">................................[ HTML5, CSS3, JavaScript, Bootstrap ]</span> 
+              <a href="https://fanciful-semolina-3ff9b0.netlify.app/" target="_blank" class="project-item-link">https://fanciful-semolina-3ff9b0.netlify.app/</a><span class="project-item-descr">................................[ HTML5, CSS3, JavaScript, Bootstrap ]</span> 
             </li>
             <li class="project-item">
-              <a href="https://master--fluffy-tanuki-c2ecaf.netlify.app/" class="project-item-link">https://master--fluffy-tanuki-c2ecaf.netlify.app/</a><span class="project-item-descr">.........................[ HTML5, CSS3, JavaScript, SCSS ]</span> 
+              <a href="https://master--fluffy-tanuki-c2ecaf.netlify.app/" target="_blank" class="project-item-link">https://master--fluffy-tanuki-c2ecaf.netlify.app/</a><span class="project-item-descr">.........................[ HTML5, CSS3, JavaScript, SCSS ]</span> 
             </li>
             <li class="project-item">
-              <a href="https://mellow-concha-4d6496.netlify.app/" class="project-item-link">https://mellow-concha-4d6496.netlify.app/</a><span class="project-item-descr">...................................[ HTML5, CSS3 ]</span> 
+              <a href="https://mellow-concha-4d6496.netlify.app/" target="_blank" class="project-item-link">https://mellow-concha-4d6496.netlify.app/</a><span class="project-item-descr">...................................[ HTML5, CSS3 ]</span> 
             </li>
 
           </ol>
