--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <h3 class="sidebar-title">Contacts</h3>
 
           <p class="contacts-item"> <span class="contacts-type">C:</span>  <a href="tel:+380 98 012 65 79" class="contacts-number">+380 98 012 65 79</a></p>
-          <p class="contacts-item"> <span class="contacts-type">E:</span> <a href="workemailaertemlozenko@gmail.com" class="contacts-email">workemailaertemlozenko@gmail.com</a></p>
+          <p class="contacts-item"> <span class="contacts-type">E:</span> <a href="mailto:workemailaertemlozenko@gmail.com" class="contacts-email">workemailaertemlozenko@gmail.com</a></p>
 
         </div>
 
