--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             Ready to learn quickly and qualitatively. I am looking forward 
             to interesting projects and opportunities 
             for professional growth and development.
+            <br>
+            <br>
+            I will accept the test task with great pleasure 
+            and am confident in my ability to achieve the expected result. 
+            My programming skills allow me to confidently perform the assigned tasks. 
+            I would be happy to demonstrate my abilities and show that 
+            I can complete the task.
           </p>
 
         </div>
@@ -44,7 +51,7 @@
           <ol class="project-list">
 
             <li class="project-item">
-              <a href="https://unrivaled-druid-b92b48.netlify.app" target="_blank" class="project-item-link">https://unrivaled-druid-b92b48.netlify.app</a><span class="project-item-descr">...................................[ HTML5, CSS3, JavaScript ]</span> 
+              <a href="https://krypto-site-netlify-383a6f.netlify.app/" target="_blank" class="project-item-link">https://krypto-site-netlify-383a6f.netlify.app/</a><span class="project-item-descr">...............................[ HTML5, CSS3, JavaScript ]</span> 
             </li>
             <li class="project-item">
               <a href="https://fanciful-semolina-3ff9b0.netlify.app/" target="_blank" class="project-item-link">https://fanciful-semolina-3ff9b0.netlify.app/</a><span class="project-item-descr">................................[ HTML5, CSS3, JavaScript, Bootstrap ]</span> 
@@ -89,7 +96,7 @@
 
             <ul class="work-achivments-list">
 
-              <li class="work-achivments">I have several projects that do not have a server side at the moment. Among them are two landing pages, Google Search and an simple online store. In these projects, I used technologies such as Bootstrap, JavaScript (JS), SCSS, jQuery, and Slick Slider. All of the above projects were developed with responsive design in mind, which allows them to fit the size of users' screens.</li>
+              <li class="work-achivments">I have several projects that do not have a server side at the moment. Among them are two landing pages, Google Search and an simple online store. In these projects, I used technologies such as Bootstrap, JavaScript (JS), SCSS, jQuery, and Slick Slider. All of the above projects were developed with responsive design, which allows them to fit the size of users' screens.</li>
 
             </ul>
             
@@ -145,13 +152,13 @@
 
           <h3 class="sidebar-title">Tech Skills</h3>
 
-          <ul class="tech-skillslist">
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">HTML5</span> </li>
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">CSS3</span> </li>
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">GIT</span> </li>
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">SCSS</span> </li>
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">Jquery</span> </li>
-            <li class="tech-skillslist-item"> <span class="tech-skillslist-text">JavaScript</span> </li>
+          <ul class="skillslist">
+            <li class="skillslist-item"> <span class="skillslist-text">HTML5</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">CSS3</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">GIT</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">SCSS</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Jquery</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">JavaScript</span> </li>
           </ul>
 
         </div>
@@ -161,11 +168,25 @@
 
           <h3 class="sidebar-title">Soft Skills</h3>
 
-          <ul class="soft-skillslist">
-            <li class="soft-skillslist-item"> <span class="soft-skillslist-text">Scrum</span> </li>
-            <li class="soft-skillslist-item"> <span class="soft-skillslist-text">Agile</span> </li>
-            <li class="soft-skillslist-item"> <span class="soft-skillslist-text">GTD</span> </li>
-            <li class="soft-skillslist-item"> <span class="soft-skillslist-text">Teamwork</span> </li>
+          <ul class="skillslist">
+            <li class="skillslist-item"> <span class="skillslist-text">Scrum</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Agile</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">GTD</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Teamwork</span> </li>
+          </ul>
+
+        </div>
+
+        <!-- Hobbies -->
+        <div class="my-hobbies">
+
+          <h3 class="sidebar-title">Hobbies</h3>
+
+          <ul class="skillslist">
+            <li class="skillslist-item"> <span class="skillslist-text">Guitar</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Gym</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Football</span> </li>
+            <li class="skillslist-item"> <span class="skillslist-text">Books</span> </li>
           </ul>
 
         </div>
